--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,12 +7,12 @@
     <string name="exit_label">退出游戏</string>
     <string name="about_label">游戏帮助</string>
     <string name="about_title">关于  魔法色块</string>
-    <string name="about_text">游戏玩法：\n\n\n按下屏幕下方的颜色按钮，左上角的色块就会变颜色。只要把整片色块变成同色就赢了。\n\n什么，还不懂规则，那就直接玩游戏吧!玩两把就会了  o(∩_∩)o \n\n   还等什么，试试吧！
+    <string name="about_text">游戏玩法：\n\n\n按下屏幕下方的颜色按钮，左上角的色块就会变成按钮颜色。我们的目标是把所有色块变成同色。\n\n什么，还不懂规则，那就直接玩游戏吧!玩两把就会了  o(∩_∩)o \n\n   还等什么，试试吧！
         \n\n\n
-        Version  1.3\n
-        Author   John Xu\n
-        Weibo    @码农同学\n
-        </string>
+        Version  2.0\n
+        Author   徐进（东北大学）\n
+        GitHub   GinSmile
+    </string>
     <string name="settings_title">设置</string>
     <string name="music_title">音乐</string>
     <string name="music_summary">打开背景音乐</string>
@@ -24,6 +24,8 @@
     <string name="easy_model">小菜一碟</string>
     <string name="medium_model">十拿九稳</string>
     <string name="hard_model">涉险过关</string>
+    <string name="no_data">暂无数据，玩一把游戏吧!</string>
+    <string name="refresh">刷新</string>
     
     <string name="back">&#8656;</string>
 
